--- a/_posts/2023-07-04-sgs.markdown
+++ b/_posts/2023-07-04-sgs.markdown
@@ -245,7 +245,6 @@ $$
 \boxed{
   \mathbb E[Y]
   = \frac{rK}{N-K+1}
-  = \frac{rN+r}{N-K+1}
   = \frac{K}{N-K+1}
 }
 $$
@@ -320,17 +319,25 @@ $$ \mathbb E[P] = \mathbb E[C]+R\mathbb E[H] = \frac{X}{4}(3+R) $$
 
 一般认为，$R \approxeq 2$，即“一血=两牌”理论（郭嘉**遗计**、黄盖**苦肉**、钟会**排异**等都是佐证）。该理论经大量游戏实践验证而一度在玩家中非常流行。当然，不少玩家对此理论也持不同观点，因此我们要讨论在**再起**技能的情况下，$R$值的合理范围。
 
-如果不发动**再起**，摸牌阶段会获得$2$张牌。若要使发动**再起**的收益优于不发动，那么：
+如果不发动**再起**，摸牌阶段会获得$2$张牌。若要使发动**再起**的收益不劣于不发动，那么：
 
-$$ \mathbb E[P] > 2 $$
+$$ \mathbb E[P] \ge 2 $$
 
-$$ X = \lceil \frac{8}{3+R} \rceil $$
+所以
+
+$$ R \ge \frac{8}{X} - 3 $$
 
 上述曲线图如下：
 
 ![再起R值](/assets/img/sgs/zaiqi_r.png)
 
-可见，在**再起**的背景下，$0 < R \le 2$。
+可见：
+
+1. 当$X \ge 3$时，无论$R$值如何，发动**再起**都有正收益
+2. 当$X = 1$时，我们应当认为发动**再起**应当有负收益，否则玩家可以在该角色受伤时总是选择发动此技能而不会担心带来负收益，而这就意味着此技能设计过强。所以，$R < 5$
+3. 当$X = 2$时，如果我们认为发动**再起**应当有正向收益，那么$R \ge 1$；否则$0 < R \le 2$
+
+综上所述，$R = 2$是一个合理的取值。在此取值下，当$X le 2$时，若非特殊情况，玩家不应发动此技能。
 
 【现实模型】
 
@@ -412,7 +419,7 @@ $$
 
 本节研究当手牌数为$n$时，可以发动**乱击**的次数。这里采用的方法基于二项分布。
 
-### 最大配对数
+##### 最大配对数
 
 求 $m$ 种花色的 $n$ 张手牌中,最大配对数的期望。
 
@@ -752,7 +759,7 @@ p(x)
 &= \mathbb E_T\!\left[\mathbb P\!\left(U < T + \mathbf{1}_{\{T<x\}}x \mid T\right)\right] \\
 &= \frac{1}{13}\sum_{T=1}^{13}\frac{C_{T,x}}{13} \\
 &= \frac{1}{169}\left(\sum_{i=1}^{x-1}(i+x-1)+\sum_{i=x}^{13}(i-1)\right) \\
-&= \frac{x^2-x+78}{169}.
+&= \frac{x^2-x+78}{169}
 \end{aligned}
 $$
 
@@ -766,7 +773,20 @@ $$
 
 可见，随着“饶舌”标记的增多，拼点赢的概率连续增大。
 
-接下来研究“饶舌”标记数量为$x$时，发动**鼓舌**而获得“饶舌”标记数量$K$。假设发动**鼓舌**时与$n$名角色同时拼点，其中$0 < n \le 3$。很明显，其概率符合二项分布$K \sim \operatorname{Bin}(n,1-p(x))$，数学期望$\mathbb E[K;x] = n(1-p(x)) = \frac{n}{169}(91-x^2+x)$。
+接下来研究“饶舌”标记数量为$x$时，发动**鼓舌**而获得的“饶舌”标记数量$K$。假设发动**鼓舌**时与$n$名角色同时拼点，其中$0 < n \le 3$。很明显，其概率符合二项分布$K \sim \operatorname{Bin}(n,1-p(x))$，数学期望和方差分别为：
+
+$$ \boxed{\mathbb E[K;x] = n(1-p(x)) = \frac{n}{169}(91-x^2+x)} $$
+
+$$
+\boxed{
+  \begin{aligned}
+  \operatorname{Var}(K;x)
+  &= np(x)(1-p(x)) \\
+  &= \frac{n}{28561}(91-x^2+x)(x^2-x+78) \\
+  &= \frac{n}{28561}(-x^4+2x^3+12x^2-13x+7098)
+  \end{aligned}
+}
+$$
 
 其期望散点图如下：
 
@@ -912,7 +932,7 @@ $$
 
 #### 袁绍（神话再临·火）
 
-对于袁绍的**乱击**，除了前面提到的最大配对数，我们还可以研究发动**乱击**的概率。
+对于袁绍的技能**乱击**，除了前面提到的最大配对数，我们还可以研究发动**乱击**的概率。
 
 定义手牌数为$X$，一副牌中不同的花色数为$m$。可以发动**乱击**的概率可用生日问题的[另一种形式](https://en.wikipedia.org/wiki/Birthday_problem#Probability_of_a_shared_birthday_(collision))来表示：
 
