--- a/_posts/2023-07-04-sgs.markdown
+++ b/_posts/2023-07-04-sgs.markdown
@@ -419,9 +419,7 @@ $$
 
 本节研究当手牌数为$n$时，可以发动**乱击**的次数。这里采用的方法基于二项分布。
 
-##### 最大配对数
-
-求 $m$ 种花色的 $n$ 张手牌中,最大配对数的期望。
+求 $m$ 种花色的 $n$ 张手牌中，**最大配对数**的期望。
 
 设 $m \ge 2$，$n \in \mathbb{N}$。令
 
@@ -954,24 +952,40 @@ $$ p_{X}(n) = 1-\prod_{k=1}^{n-1}\left(1-{\frac{\min(k, m)}{m}}\right) $$
 
 **称象**：当你受到伤害后，你可以亮出牌堆顶的四张牌，然后你获得其中的任意张点数之和不大于13的牌。
 
-下面我们考虑**称象**获得的牌数。
+下面我们考虑理想模型下**称象**获得的牌数。
 
 【Ehrhart】
 
-用$\mathbf{x} = \begin{pmatrix}
-x1 & x2 & x3 & x4
-\end{pmatrix}^{T}$表示亮出的四张牌的点数，其中$x_i \in \mathbb{Z}_{> 0}$。定义**称象**获得的牌数为$K$，则：
+用
+$$
+\mathbf{x} = (x_1,x_2,x_3,x_4)^{\mathsf T},\qquad x_i \in \{\,1,2,\dots\,\}
+$$
+表示亮出的四张牌的点数。定义随机变量$K$为**称象**最终获得的牌数，即满足点数和不超过 13 的可选牌张数。
 
-当$K = 4$时：
+【情形一】
 
-$$ \mathbf{J}_{1,4}\mathbf{x} \le 13 $$
+当$K = 4$时，四张牌全部可取，需满足
 
-运用Stars and bars法，可知上式的整数解组数为$\binom{13}{4} = 715$。
+$$ x_1+x_2+x_3+x_4 \le 13 $$
 
-当$K = 1$时：
+运用Stars and bars法，可知其整数解组数为
 
 $$
-\begin{pmatrix}
+\binom{13}{4} = 715
+$$
+
+【情形二】
+
+当$K = 1$时，当且仅当恰有一张牌可取，对应的不等式系统可写为
+
+$$
+A\mathbf x\le \mathbf b
+$$
+
+其中
+
+$$
+A=\begin{pmatrix}
 -1 & -1 & 0 & 0 \\
 -1 & 0 & -1 & 0 \\
 -1 & 0 & 0 & -1 \\
@@ -986,12 +1000,17 @@ $$
 0 & -1 & 0 & 0 \\
 0 & 0 & -1 & 0 \\
 0 & 0 & 0 & -1
-\end{pmatrix}\mathbf{x} \le \begin{pmatrix}
--14 \\ -14 \\ -14 \\ -14 \\ -14 \\ -14 \\ 13 \\ 13 \\ 13 \\ 13 \\ -1 \\ -1 \\ -1 \\ -1
+\end{pmatrix},
+\qquad
+\mathbf b=
+\begin{pmatrix}
+-14\\-14\\-14\\-14\\-14\\-14\\
+13\\13\\13\\13\\
+-1\\-1\\-1\\-1
 \end{pmatrix}
 $$
 
-要求解满足以上不等式组的整数解的个数，等价于求解四维凸多胞形（[Convex polytope](https://en.wikipedia.org/wiki/Convex_polytope)）中的整数点（晶格点）的个数。以上矩阵不等式为该四维凸多胞形的半空间表示（Half-space representation）。利用开源软件[polymake](https://polymake.org/doku.php/start)，我们可以得知该凸多胞形为整多胞形（[Integral polytope](https://en.wikipedia.org/wiki/Integral_polytope)），进而可得到其Ehrhart多项式（[Ehrhart polynomial](https://en.wikipedia.org/wiki/Ehrhart_polynomial)）：
+该不等式组定义了一个四维凸多胞形（[Convex polytope](https://en.wikipedia.org/wiki/Convex_polytope)）。问题等价于计算该多胞形中晶格点的数量。以上矩阵不等式为该四维凸多胞形的半空间表示（Half-space representation）。利用开源软件[polymake](https://polymake.org/doku.php/start)计算可知，该凸多胞形为整多胞形（[Integral polytope](https://en.wikipedia.org/wiki/Integral_polytope)），其Ehrhart多项式（[Ehrhart polynomial](https://en.wikipedia.org/wiki/Ehrhart_polynomial)）：
 
 ```perl
 polytope > $p = new Polytope(INEQUALITIES=>[[-14,1,1,0,0],[-14,1,0,1,0],[-14,1,0,0,1],[-14,0,1,1,0],[-14,0,1,0,1],[-14,0,0,1,1],[-1,1,0,0,0],[-1,0,1,0,0],[-1,0,0,1,0],[-1,0,0,0,1],[13,-1,0,0,0],[13,0,-1,0,0],[13,0,0,-1,0],[13,0,0,0,-1]]);
@@ -1003,11 +1022,24 @@ polytope > print $p->EHRHART_POLYNOMIAL;
 2592*x^4 + 1296*x^3 + 252*x^2 + 24*x + 1
 ```
 
-所以，该凸多胞形内晶格点的个数为$2592+1296+252+24+1=4165$。
-
-当$K = 3$时，可用几个不等式组表示不同的情况：
+因此，该凸多胞形内晶格点的个数为
 
 $$
+\#(K=1)=2592+1296+252+24+1=4165
+$$
+
+【情形三】
+
+当$K = 3$时，根据不可取牌在四个位置中的不同分布情况，可将可行域划分为若干互不相交的情形。每一种情形均可表示为一个线性不等式系统
+
+$$
+A_i \mathbf x \le \mathbf b_i
+$$
+
+从而对应一个四维凸多胞形。
+
+$$
+A_1 =
 \begin{pmatrix}
 -1 & -1 & -1 & -1 \\
 1 & 1 & 1 & 0 \\
@@ -1018,12 +1050,16 @@ $$
 0 & -1 & 0 & 0 \\
 0 & 0 & -1 & 0 \\
 0 & 0 & 0 & -1
-\end{pmatrix}\mathbf{x} \le \begin{pmatrix}
+\end{pmatrix},
+\qquad
+\mathbf b_1 =
+\begin{pmatrix}
 -14 \\ 13 \\ 13 \\ 13 \\ 13 \\ -1 \\ -1 \\ -1 \\ -1
 \end{pmatrix}
 $$
 
 $$
+A_2 =
 \begin{pmatrix}
 1 & 1 & 1 & 0 \\
 1 & 1 & 0 & 1 \\
@@ -1033,12 +1069,16 @@ $$
 0 & -1 & 0 & 0 \\
 0 & 0 & -1 & 0 \\
 0 & 0 & 0 & -1
-\end{pmatrix}\mathbf{x} \le \begin{pmatrix}
+\end{pmatrix},
+\qquad
+\mathbf b_2 =
+\begin{pmatrix}
 13 \\ 13 \\ 13 \\ -14 \\ -1 \\ -1 \\ -1 \\ -1
 \end{pmatrix}
 $$
 
 $$
+A_3 =
 \begin{pmatrix}
 1 & 1 & 1 & 0 \\
 1 & 1 & 0 & 1 \\
@@ -1048,12 +1088,16 @@ $$
 0 & -1 & 0 & 0 \\
 0 & 0 & -1 & 0 \\
 0 & 0 & 0 & -1
-\end{pmatrix}\mathbf{x} \le \begin{pmatrix}
--14 \\ 13 \\ 13 \\ -14 \\ -14 \\ -1 \\ -1 \\ -1 \\ -1
+\end{pmatrix},
+\qquad
+\mathbf b_3 =
+\begin{pmatrix}
+13 \\ 13 \\ -14 \\ -14 \\ -1 \\ -1 \\ -1 \\ -1
 \end{pmatrix}
 $$
 
 $$
+A_4 =
 \begin{pmatrix}
 -1 & -1 & -1 & -1 \\
 1 & 1 & 1 & 0 \\
@@ -1065,12 +1109,17 @@ $$
 0 & -1 & 0 & 0 \\
 0 & 0 & -1 & 0 \\
 0 & 0 & 0 & -1
-\end{pmatrix}\mathbf{x} \le \begin{pmatrix}
+\end{pmatrix},
+\qquad
+\mathbf b_4 =
+\begin{pmatrix}
 -14 \\ 13 \\ -14 \\ -14 \\ -14 \\ 13 \\ -1 \\ -1 \\ -1 \\ -1
 \end{pmatrix}
 $$
 
-根据对称性，以上每种情况所得的结果应乘以相对应的系数，分别为：$\binom{4}{4} = 1$、$\binom{4}{3} = 4$、$\binom{4}{2} = 6$和$\binom{4}{1} = 4$。
+上述四个不等式系统分别给出了四个四维凸多胞形。
+
+由牌位的对称性可知，其对应的组合系数分别为：$\binom{4}{4} = 1$、$\binom{4}{3} = 4$、$\binom{4}{2} = 6$和$\binom{4}{1} = 4$。
 
 再次利用polymake的计算可知，以上四种情况对应的四个凸多胞形均为有理多胞形（Rational polytope）而非整多胞形。因此，只能通过求解其Ehrhart准多项式（[Ehrhart quasi-polynomial](https://en.wikipedia.org/wiki/Ehrhart_polynomial#Ehrhart_quasi-polynomials)）来求解其所包含的晶格点：
 
@@ -1124,11 +1173,21 @@ polytope > print $p4->N_LATTICE_POINTS;
 1298
 ```
 
-在乘以相应的系数后，此类整数解组数为$$ 445+136*4+284*6+1298*4=7885 $$。
+在乘以相应的系数后，此类整数解组数为
 
-当$K = 2$时，整数解组数为$$ 13^4-\#(K=4)-\#(K=1)-\#(K=3)=15796 $$。
+$$
+\#(K=3) = 445+136*4+284*6+1298*4=7885
+$$
 
-其概率散点图为：
+【情形四】
+
+当$K = 2$时，由于所有点数组合的总数为 \(13^4\)，可通过补集直接得到
+
+$$
+\#(K=2)=13^4-\#(K=1)-\#(K=3)-\#(K=4)=15796
+$$
+
+由上述计数结果可得随机变量$K$的概率分布。其概率散点图为：
 
 ![称象概率](/assets/img/sgs/chengxiang.png)
 
@@ -1138,265 +1197,7 @@ $$ \boxed{\mathbb E[K] = \frac{62272}{28561} \approxeq 2.1803} $$
 
 $$ \boxed{\operatorname{Var}(K) = \frac{399322010}{815730721} \approxeq 0.4895} $$
 
-【生成函数 + 升标号】
-
-另一种解法从**组合生成函数**出发，将“无序多重集合计数”与“有序四元组计数”通过一个明确的升标号算子连接起来。该方法完全白盒，且所有计算均归结为**有限次系数抽取与有限求和**。
-
-设四张牌点数为
-
-$$
-x_1,x_2,x_3,x_4\in\{1,2,\dots,13\}
-$$
-
-并记其排序后的次序统计量为
-
-$$
-A_1\le A_2\le A_3\le A_4
-$$
-
-定义在总和不超过 $13$ 的约束下**最多可取的张数**
-
-$$
-K:=\max\{k\in\{1,2,3,4\}:A_1+\cdots+A_k\le 13\}
-$$
-
-显然
-
-$$
-\mathbb P(K\ge k)=\mathbb P(A_1+\cdots+A_k\le 13)
-$$
-
-并且
-
-$$
-\mathbb P(K=k)=\mathbb P(K\ge k)-\mathbb P(K\ge k+1)
-$$
-
-因此，只需分别计数事件 $K\ge 2$、$K\ge 3$、$K\ge 4$ 对应的**有序四元组**数量。
-
-引入形式变量 $y_1,\dots,y_{13}$。 $y_j$记录点数为 $j$ 的牌出现次数（用于后续从多重集合升标号到有序四元组）。
-对任意大小为 $4$ 的多重集合
-
-$$
-M=\{1^{m_1}2^{m_2}\cdots 13^{m_{13}}\},\qquad \sum_{j=1}^{13}m_j=4
-$$
-
-定义其对应单项式
-
-$$
-y^M:=\prod_{j=1}^{13}y_j^{m_j}.
-$$
-
-对于任一仅依赖多重集合（即对置换对称）的性质 $\mathcal P$，定义**无序多重集合枚举多项式**
-
-$$
-U_{\mathcal P}(y_1,\dots,y_{13})
-:=\sum_{\substack{M:\ \sum m_j=4\\ \mathcal P(M)\ \text{成立}}} y^M
-$$
-
-定义升标号线性算子
-
-$$
-\mathrm{Lab}_4:\ \mathbb{Q}[y_1,\dots,y_{13}]_{\text{齐次次数 }4}
-\longrightarrow
-\mathbb{Q}[y_1,\dots,y_{13}]_{\text{齐次次数 }4}
-$$
-
-在基单项式上的作用为
-
-$$
-\mathrm{Lab}_4\!\left(\prod_{j=1}^{13}y_j^{m_j}\right)
-:=\frac{4!}{\prod_{j=1}^{13}m_j!}\prod_{j=1}^{13}y_j^{m_j},
-\qquad \sum m_j=4
-$$
-
-并线性延拓。
-
-**解释**：$\dfrac{4!}{\prod m_j!}$ 正是将该多重集合分配到 $4$ 个有序位置的排列数。
-
-因此，有序四元组的计数可由下式给出：
-
-$$
-\#\{(x_1,x_2,x_3,x_4):\mathcal P\}
-=
-\Big(\mathrm{Lab}_4(U_{\mathcal P})\Big)\Big|_{y_1=\cdots=y_{13}=1}
-$$
-
-现在构造 $K\ge 3$ 的多重集合枚举多项式
-
-事件
-
-$$
-K\ge 3 \iff A_1+A_2+A_3\le 13
-$$
-
-仅依赖多重集合结构。
-
-为了计数满足 $A_1+A_2+A_3\le 13$ 的情形，一个自然的思路是按第三小值 $A_3$ 分层。令
-
-$$
-A_3=c,\qquad c\in\{1,2,\dots,13\}
-$$
-
-那么前三张（即 $A_1,A_2,A_3$）满足
-
-$$
-1\le A_1\le A_2\le A_3=c
-$$
-
-因此 $A_1,A_2$ 只能从集合 $\{1,2,\dots,c-1\}$ 中取值（允许重复），而 $c$ 至少出现一次。
-
-为了用生成函数“同时记录张数与点数和”，我们引入两个标记变量：
-
-- $u$：记录取了多少张（即计数元素个数）
-- $z$：记录点数和
-
-对每个点数 $j\le c-1$，它在多重集合里可以出现 $0,1,2,\dots$ 次。若点数 $j$ 出现了 $t$ 次，则贡献为
-
-$$
-(u\,y_j\,z^j)^t
-$$
-
-因此点数 $j$ 的贡献生成函数为几何级数
-
-$$
-1+(u\,y_j\,z^j)+(u\,y_j\,z^j)^2+\cdots=\frac{1}{1-u\,y_j\,z^j}
-$$
-
-把所有 $j=1,2,\dots,c-1$ 的可能性独立相乘，就得到
-
-$$
-B_{c-1}(u,z):=\prod_{j=1}^{c-1}\frac{1}{1-u\,y_j\,z^j}
-$$
-
-这正是在“第三小为 $c$”的情形下，前三张中**小于 $c$ 的部分**（即 $A_1,A_2$ 以及可能出现的更多小牌）所对应的多重集合生成函数。
-
-并定义截断算子
-
-$$
-[z^{\le 13}]\Phi(z):=\sum_{s=0}^{13}[z^s]\Phi(z)
-$$
-
-设
-$$
-\Theta_3(c)
-:=
-[z^{\le 13}]\,[u^3]\;
-\left(\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c}\right)
-B_{c-1}(u,z)
-$$
-
-即为按 $A_3=c$ 分层的计数表达式。此表达式正是在辅助生成函数的基础上，再额外乘上一个“至少一个 $c$”的因子
-
-$$
-\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c},
-$$
-
-(此因子是点数 $c$ 的生成函数，表示其在前三张牌中**至少出现一次**；这是由恒等式 $X+X^2+X^3+\cdots=X/(1-X)$ 直接得到的，并且恰好刻画了“第三小值等于 $c$”所需的必要且充分条件。)
-
-并通过取 $[u^3]$ 强制“前三张恰好三张”，再通过截断 $[z^{\le 13}]$ 强制“前三张和不超过 13”即可得。它枚举“第三小值恰为 $c$ 且前三小之和不超过 $13$”的多重集合（仅含前三个元素）。
-
-第四张牌必须满足 $A_4\ge c$，因此得到
-
-$$
-U_{\ge 3}(y)
-=
-\sum_{c=1}^{13}\left(\sum_{d=c}^{13}y_d\right)\Theta_3(c)
-$$
-
-对应的**有序四元组计数**为
-
-$$
-\#(K\ge 3)
-=
-\Big(\mathrm{Lab}_4(U_{\ge 3})\Big)\Big|_{y_1=\cdots=y_{13}=1}
-$$
-
-类似地，对$K\ge 2$可构造
-
-$$
-\Theta_2(c)
-:=
-[z^{\le 13}]\,[u^2]\;
-\left(\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c}\right)
-B_{c-1}(u,z)
-$$
-
-并得到
-
-$$
-U_{\ge 2}(y)
-=
-\sum_{c=1}^{13}\left(\sum_{d=c}^{13}y_d\right)^2\Theta_2(c)
-$$
-
-从而
-
-$$
-\#(K\ge 2)
-=
-\Big(\mathrm{Lab}_4(U_{\ge 2})\Big)\Big|_{y_1=\cdots=y_{13}=1}
-$$
-
-此外
-
-$$
-\#(K\ge 4)=\binom{13}{4}
-$$
-
-由差分关系
-
-$$
-\#(K=3)=\#(K\ge 3)-\#(K\ge 4)
-$$
-
-$$
-\#(K=2)=\#(K\ge 2)-\#(K\ge 3)
-$$
-
-$$
-\#(K=1)=13^4-\#(K\ge 2)
-$$
-
-即可得到 $K$ 的完整分布。
-
-由于 $c$ 仅在 $1\le c\le 13$ 上求和，且所有生成函数只需截断到 $z^{13}$，上述所有系数抽取均为**有限代数运算**。计算这些有限系数可得
-
-$$
-\#(K=1)=4165,\quad
-\#(K=2)=15796,\quad
-\#(K=3)=7885,\quad
-\#(K=4)=715
-$$
-
-从而
-
-$$
-\mathbb E[K]=\frac{62272}{28561},\qquad
-\mathrm{Var}(K)=\frac{399322010}{815730721}.
-$$
-
-【备注】与常数项（CT）表示的等价性
-
-上述升标号算子 $\mathrm{Lab}_4$ 可等价地用常数项算子表示。对任意齐次 $4$ 次多项式 $U(y)$，有
-
-$$
-\left.\mathrm{Lab}_4(U)\right|_{y_1=\cdots=y_{13}=1}
-=
-\mathrm{CT}_{y}\!\left[
-U(y)\left(\sum_{j=1}^{13}y_j^{-1}\right)^4
-\right]
-$$
-
-其中 $\mathrm{CT}_{y}$ 表示取 $y_1^0\cdots y_{13}^0$ 的系数。
-
-该恒等式表明：常数项运算自动为每个多重集合插入正确的排列权重
-
-$$
-\frac{4!}{\prod m_j!}
-$$
-
-从而在形式上等价于升标号算子。本文主文采用 $\mathrm{Lab}_4$ 以增强直观性；CT 表示可视为其代数化实现。
+该问题亦可通过组合生成函数与次序统计量进行纯组合论推导（参见附录）。但在本问题规模下，该方法并不能显著降低计算复杂度；相反，将计数问题转化为凸多胞形中的晶格点计数，并借助 Ehrhart 理论与 polymake 实现自动化计算，更有利于保证结果的完整性与可复现性。
 
 ### 随机子集和的可达性概率
 
@@ -1406,7 +1207,7 @@ $$
 
 **资援**：出牌阶段限一次，你可以将任意张点数之和为13的手牌交给一名其他角色，然后该角色回复1点体力。
 
-下面研究在手牌数为 $X$ 的情况下，可以发动**资援**的概率。这是典型的NP-hard的子集和问题（[Subset sum problem](https://en.wikipedia.org/wiki/Subset_sum_problem)）。程序如下：
+下面研究在手牌数为 $X$ 的情况下，可以发动**资援**的概率。这是典型的NP完备（NP-Complete）的子集和问题（[Subset sum problem](https://en.wikipedia.org/wiki/Subset_sum_problem)）。程序如下：
 
 ```python
 from collections import defaultdict
@@ -1778,6 +1579,268 @@ $$ \square $$
 ### 总结
 
 以上几个同类技能各有优劣，可见设计是比较均衡的。
+
+## 附录
+
+### **称象**获得牌数的组合生成函数解法
+
+另一种解法从**组合生成函数**出发，将“无序多重集合计数”与“有序四元组计数”通过一个明确的升标号算子连接起来。该方法完全白盒，且所有计算均归结为**有限次系数抽取与有限求和**。
+
+设四张牌点数为
+
+$$
+x_1,x_2,x_3,x_4\in\{1,2,\dots,13\}
+$$
+
+并记其排序后的次序统计量为
+
+$$
+A_1\le A_2\le A_3\le A_4
+$$
+
+定义在总和不超过 $13$ 的约束下**最多可取的张数**
+
+$$
+K:=\max\{k\in\{1,2,3,4\}:A_1+\cdots+A_k\le 13\}
+$$
+
+显然
+
+$$
+\mathbb P(K\ge k)=\mathbb P(A_1+\cdots+A_k\le 13)
+$$
+
+并且
+
+$$
+\mathbb P(K=k)=\mathbb P(K\ge k)-\mathbb P(K\ge k+1)
+$$
+
+因此，只需分别计数事件 $K\ge 2$、$K\ge 3$、$K\ge 4$ 对应的**有序四元组**数量。
+
+引入形式变量 $y_1,\dots,y_{13}$。 $y_j$记录点数为 $j$ 的牌出现次数（用于后续从多重集合升标号到有序四元组）。
+对任意大小为 $4$ 的多重集合
+
+$$
+M=\{1^{m_1}2^{m_2}\cdots 13^{m_{13}}\},\qquad \sum_{j=1}^{13}m_j=4
+$$
+
+定义其对应单项式
+
+$$
+y^M:=\prod_{j=1}^{13}y_j^{m_j}.
+$$
+
+对于任一仅依赖多重集合（即对置换对称）的性质 $\mathcal P$，定义**无序多重集合枚举多项式**
+
+$$
+U_{\mathcal P}(y_1,\dots,y_{13})
+:=\sum_{\substack{M:\ \sum m_j=4\\ \mathcal P(M)\ \text{成立}}} y^M
+$$
+
+定义升标号线性算子
+
+$$
+\mathrm{Lab}_4:\ \mathbb{Q}[y_1,\dots,y_{13}]_{\text{齐次次数 }4}
+\longrightarrow
+\mathbb{Q}[y_1,\dots,y_{13}]_{\text{齐次次数 }4}
+$$
+
+在基单项式上的作用为
+
+$$
+\mathrm{Lab}_4\!\left(\prod_{j=1}^{13}y_j^{m_j}\right)
+:=\frac{4!}{\prod_{j=1}^{13}m_j!}\prod_{j=1}^{13}y_j^{m_j},
+\qquad \sum m_j=4
+$$
+
+并线性延拓。
+
+**解释**：$\dfrac{4!}{\prod m_j!}$ 正是将该多重集合分配到 $4$ 个有序位置的排列数。
+
+因此，有序四元组的计数可由下式给出：
+
+$$
+\#\{(x_1,x_2,x_3,x_4):\mathcal P\}
+=
+\Big(\mathrm{Lab}_4(U_{\mathcal P})\Big)\Big|_{y_1=\cdots=y_{13}=1}
+$$
+
+现在构造 $K\ge 3$ 的多重集合枚举多项式
+
+事件
+
+$$
+K\ge 3 \iff A_1+A_2+A_3\le 13
+$$
+
+仅依赖多重集合结构。
+
+为了计数满足 $A_1+A_2+A_3\le 13$ 的情形，一个自然的思路是按第三小值 $A_3$ 分层。令
+
+$$
+A_3=c,\qquad c\in\{1,2,\dots,13\}
+$$
+
+那么前三张（即 $A_1,A_2,A_3$）满足
+
+$$
+1\le A_1\le A_2\le A_3=c
+$$
+
+因此 $A_1,A_2$ 只能从集合 $\{1,2,\dots,c-1\}$ 中取值（允许重复），而 $c$ 至少出现一次。
+
+为了用生成函数“同时记录张数与点数和”，我们引入两个标记变量：
+
+- $u$：记录取了多少张（即计数元素个数）
+- $z$：记录点数和
+
+对每个点数 $j\le c-1$，它在多重集合里可以出现 $0,1,2,\dots$ 次。若点数 $j$ 出现了 $t$ 次，则贡献为
+
+$$
+(u\,y_j\,z^j)^t
+$$
+
+因此点数 $j$ 的贡献生成函数为几何级数
+
+$$
+1+(u\,y_j\,z^j)+(u\,y_j\,z^j)^2+\cdots=\frac{1}{1-u\,y_j\,z^j}
+$$
+
+把所有 $j=1,2,\dots,c-1$ 的可能性独立相乘，就得到
+
+$$
+B_{c-1}(u,z):=\prod_{j=1}^{c-1}\frac{1}{1-u\,y_j\,z^j}
+$$
+
+这正是在“第三小为 $c$”的情形下，前三张中**小于 $c$ 的部分**（即 $A_1,A_2$ 以及可能出现的更多小牌）所对应的多重集合生成函数。
+
+并定义截断算子
+
+$$
+[z^{\le 13}]\Phi(z):=\sum_{s=0}^{13}[z^s]\Phi(z)
+$$
+
+设
+$$
+\Theta_3(c)
+:=
+[z^{\le 13}]\,[u^3]\;
+\left(\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c}\right)
+B_{c-1}(u,z)
+$$
+
+即为按 $A_3=c$ 分层的计数表达式。此表达式正是在辅助生成函数的基础上，再额外乘上一个“至少一个 $c$”的因子
+
+$$
+\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c},
+$$
+
+（此因子是点数 $c$ 的生成函数，表示其在前三张牌中**至少出现一次**；这是由恒等式 $X+X^2+X^3+\cdots=X/(1-X)$ 直接得到的，并且恰好刻画了“第三小值等于 $c$”所需的必要且充分条件。）
+
+并通过取 $[u^3]$ 强制“前三张恰好三张”，再通过截断 $[z^{\le 13}]$ 强制“前三张和不超过 13”即可得。它枚举“第三小值恰为 $c$ 且前三小之和不超过 $13$”的多重集合（仅含前三个元素）。
+
+第四张牌必须满足 $A_4\ge c$，因此得到
+
+$$
+U_{\ge 3}(y)
+=
+\sum_{c=1}^{13}\left(\sum_{d=c}^{13}y_d\right)\Theta_3(c)
+$$
+
+对应的**有序四元组计数**为
+
+$$
+\#(K\ge 3)
+=
+\Big(\mathrm{Lab}_4(U_{\ge 3})\Big)\Big|_{y_1=\cdots=y_{13}=1}
+$$
+
+类似地，对$K\ge 2$可构造
+
+$$
+\Theta_2(c)
+:=
+[z^{\le 13}]\,[u^2]\;
+\left(\frac{u\,y_c\,z^c}{1-u\,y_c\,z^c}\right)
+B_{c-1}(u,z)
+$$
+
+并得到
+
+$$
+U_{\ge 2}(y)
+=
+\sum_{c=1}^{13}\left(\sum_{d=c}^{13}y_d\right)^2\Theta_2(c)
+$$
+
+从而
+
+$$
+\#(K\ge 2)
+=
+\Big(\mathrm{Lab}_4(U_{\ge 2})\Big)\Big|_{y_1=\cdots=y_{13}=1}
+$$
+
+此外
+
+$$
+\#(K\ge 4)=\binom{13}{4}
+$$
+
+由差分关系
+
+$$
+\#(K=3)=\#(K\ge 3)-\#(K\ge 4)
+$$
+
+$$
+\#(K=2)=\#(K\ge 2)-\#(K\ge 3)
+$$
+
+$$
+\#(K=1)=13^4-\#(K\ge 2)
+$$
+
+即可得到 $K$ 的完整分布。
+
+由于 $c$ 仅在 $1\le c\le 13$ 上求和，且所有生成函数只需截断到 $z^{13}$，上述所有系数抽取均为**有限代数运算**。计算这些有限系数可得
+
+$$
+\#(K=1)=4165,\quad
+\#(K=2)=15796,\quad
+\#(K=3)=7885,\quad
+\#(K=4)=715
+$$
+
+从而
+
+$$
+\mathbb E[K]=\frac{62272}{28561},\qquad
+\mathrm{Var}(K)=\frac{399322010}{815730721}.
+$$
+
+【备注】与常数项（CT）表示的等价性
+
+上述升标号算子 $\mathrm{Lab}_4$ 可等价地用常数项算子表示。对任意齐次 $4$ 次多项式 $U(y)$，有
+
+$$
+\left.\mathrm{Lab}_4(U)\right|_{y_1=\cdots=y_{13}=1}
+=
+\mathrm{CT}_{y}\!\left[
+U(y)\left(\sum_{j=1}^{13}y_j^{-1}\right)^4
+\right]
+$$
+
+其中 $$ \mathrm{CT}_{y} $$ 表示取 $y_1^0\cdots y_{13}^0$ 的系数。
+
+该恒等式表明：常数项运算自动为每个多重集合插入正确的排列权重
+
+$$
+\frac{4!}{\prod m_j!}
+$$
+
+从而在形式上等价于升标号算子。本文主文采用 $\mathrm{Lab}_4$ 以增强直观性；CT 表示可视为其代数化实现。
 
 ## 脚注
 
